--- a/lab02/style.css
+++ b/lab02/style.css
@@ -6,4 +6,6 @@ h1{
     color: blueviolet;
     text-align: center;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    border-color: bisque;
 }
+
