--- a/lab02/style.css
+++ b/lab02/style.css
@@ -3,14 +3,20 @@ body{
 }
 
 h1{
-    color: blueviolet;
+    color: black;
     text-align: center;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    text-decoration: underline;
+    text-decoration-color: brown;
+    text-decoration-style: dotted;
     /* border-color:darkkhaki; */
 }
 
 h2{
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-decoration: underline;
+    text-decoration-color: darkgoldenrod;
+    text-decoration-style:solid;
 }
 
