--- a/lab02/style.css
+++ b/lab02/style.css
@@ -24,6 +24,8 @@ h2{
 } */
 
 table, th, td{
-    border: 1px solid black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large;
+    border: 1px solid blue;
     border-collapse: collapse;
 }
